[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/menus/main_menu/main_menu.tres" type="Theme" id=1]
[ext_resource path="res://menus/game_over/GameOver.gd" type="Script" id=2]
[ext_resource path="res://assets/default_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/menus/game_over/Background.tres" type="StyleBox" id=4]
[ext_resource path="res://menus/main_menu/SelectorButton.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "game_over"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverContainer/GameOverSubtext:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.3, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverContainer/GameOverTitle/GameOverText1:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0.654902, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameOverContainer/GameOverTitle/GameOverText2:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0.654902, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GameOverContainer/Buttons/Retry:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( -0.3, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GameOverContainer/Buttons/Exit:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( -0.3, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Background:custom_styles/panel:bg_color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( -0.3, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.745098 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("GameOverContainer/GameOverTitle:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( -0.3, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("GameOverContainer/GameOverTitle/GameOverText1:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( -0.3, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("GameOverContainer/GameOverTitle/GameOverText2:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( -0.3, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -142.0
margin_bottom = 142.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverTitle" type="HBoxContainer" parent="GameOverContainer"]
visible = false
margin_right = 800.0
margin_bottom = 60.0

[node name="GameOverText1" type="Label" parent="GameOverContainer/GameOverTitle"]
visible = false
margin_right = 398.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverText2" type="Label" parent="GameOverContainer/GameOverTitle"]
visible = false
margin_left = 402.0
margin_right = 800.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverSubtext" type="Label" parent="GameOverContainer"]
visible = false
margin_top = 64.0
margin_right = 800.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 3 )
align = 1

[node name="Buttons" type="HBoxContainer" parent="GameOverContainer"]
margin_right = 640.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )

[node name="Retry" parent="GameOverContainer/Buttons" instance=ExtResource( 5 )]
visible = false
margin_top = 117.0
margin_right = 398.0
margin_bottom = 183.0
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="Exit" parent="GameOverContainer/Buttons" instance=ExtResource( 5 )]
visible = false
margin_left = 402.0
margin_top = 117.0
margin_right = 800.0
margin_bottom = 183.0
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/game_over = SubResource( 1 )
